c6.out
   Compiling rp-pico v0.7.0 (/home/pi/rp-hal-boards/boards/rp-pico)
error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `;`
  --> boards/rp-pico/examples/b_blinky.rs:92:20
   |
92 |     rp2040_hal::I2C;
   |                    ^ expected one of 7 possible tokens

warning: unused import: `core::fmt::Write as FmtWrite`
 --> boards/rp-pico/examples/b_blinky.rs:6:5
  |
6 | use core::fmt::Write as FmtWrite;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `rp_pico::entry`
  --> boards/rp-pico/examples/b_blinky.rs:10:5
   |
10 | use rp_pico::entry;
   |     ^^^^^^^^^^^^^^

warning: unused imports: `Operation`, `Read`, `Transactional`, `WriteIter`, `Write`
  --> boards/rp-pico/examples/b_blinky.rs:21:35
   |
21 | use embedded_hal::blocking::i2c::{Operation, Read, Transactional, Write, WriteIter};
   |                                   ^^^^^^^^^  ^^^^  ^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^

error[E0107]: missing generics for struct `rp2040_hal::I2C`
   --> boards/rp-pico/examples/b_blinky.rs:92:17
    |
92  |     rp2040_hal::I2C;
    |                 ^^^ expected at least 2 generic arguments
    |
note: struct defined here, with at least 2 generic parameters: `I2C`, `Pins`
   --> /home/pi/.cargo/registry/src/github.com-1285ae84e5963aae/rp2040-hal-0.8.1/src/i2c.rs:213:12
    |
213 | pub struct I2C<I2C, Pins, Mode = Controller> {
    |            ^^^ ---  ----
help: add missing generic arguments
    |
92  |     rp2040_hal::I2C<I2C, Pins>;
    |                    +++++++++++

For more information about this error, try `rustc --explain E0107`.
warning: `rp-pico` (example "b_blinky") generated 3 warnings
error: could not compile `rp-pico` due to 2 previous errors; 3 warnings emitted
